--- a/style.css
+++ b/style.css
@@ -1,6 +1,56 @@
 body {
-    background color: #efeee7;
-    font: Georgia, "Times New Roman", Times, serif;
-    font color: #333333
+    background-color: #efeee7;
+    font: "Georgia", "Times New Roman", Times, serif;
+    color: #333333;
+    margin:0;
+    padding: 0;
 
+}
+
+header {
+    background-color: #333333;
+       }
+
+h1 {
+    color: #efeee7;
+    background-color: #333333;
+    margin: 0px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+.container {
+    margin: 0 auto;
+    }
+
+#main-bio, #bio-image, #contact-info {
+        float: left;
+    }
+
+#bio-image{
+    width: 200px;
+}
+
+#main-bio{
+    width: 70%;
+}
+
+#bio-image{
+    margin-top: 0;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+}
+
+body {
+    line-height: 1.5em;
+}
+
+a {
+    color: red;
 }
